Fix directory bug on Firefox

--- a/BearClubs/src/less/event/directory.less
+++ b/BearClubs/src/less/event/directory.less
@@ -1,5 +1,8 @@
 #content {
     .event-directory-header {
+        width: 100%;
+        height: 60px;
+
         .event-directory-nameplate {
             display: inline;
 
