--- a/BearClubs/src/less/organization/directory.less
+++ b/BearClubs/src/less/organization/directory.less
@@ -1,5 +1,8 @@
 #content {
     .club-directory-header {
+        width: 100%;
+        height: 60px;
+
         .club-directory-nameplate {
             display: inline;
 
